[package]
name = "xiaoguai-coding"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Governed coding workflow — persistent git workspace + checkpoint/rollback primitive (DEC-034/035, LLD-CODING-001)."

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "rt", "macros", "io-util", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }
# `mcp` feature: expose the governed coding tools to the ReAct loop as an
# in-process MCP client (registered into the agent Toolbox by xiaoguai-core).
xiaoguai-mcp = { path = "../xiaoguai-mcp", optional = true }
serde_json = { workspace = true, optional = true }
# Sandboxed JS execution reused by the governed `run_code` tool (#19a). The lib
# API (`run_javascript`) embeds the sandbox (fresh tempdir CWD + ulimit +
# scrubbed env + output cap) in-process — DEC-033 single-binary, no extra
# process/MCP server. mcp-exec-js does NOT depend on xiaoguai-coding (no cycle).
xiaoguai-mcp-exec-js = { path = "../xiaoguai-mcp-exec-js" }

[features]
# Off by default so the base crate (workspace/checkpoint primitive) stays free
# of the MCP dep; xiaoguai-core turns it on to wire coding tools into the agent.
mcp = ["dep:xiaoguai-mcp", "dep:serde_json"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
serde_json = { workspace = true }

[lints]
workspace = true
