[package]
name = "xiaoguai-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration loader for Xiaoguai (file + env + secrets)."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
# Sprint-13 S13-0: parse `"24h"` strings into `Duration` for per-scope
# expiry knobs (`agent.hotl.expiry.{tool,mcp,skill}`).
humantime-serde = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
