[package]
name = "xiaoguai-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Xiaoguai core binary — wires api + agent + mcp + llm + storage + auth + audit."

[[bin]]
name = "xiaoguai-core"
path = "src/main.rs"

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-config = { path = "../xiaoguai-config" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-auth = { path = "../xiaoguai-auth" }
xiaoguai-audit = { path = "../xiaoguai-audit" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-api = { path = "../xiaoguai-api" }
xiaoguai-mcp = { path = "../xiaoguai-mcp" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
# v0.6.5: bridge `PgAuditSink` into `xiaoguai-api`'s `AuditReader` /
# `AuditVerifier` traits inside this binary.
async-trait = { workspace = true }
hex = "0.4"
# v0.7.4: IM gateway wiring (PG history default + in-process fallback).
axum = { workspace = true }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
xiaoguai-im-feishu = { path = "../xiaoguai-im-feishu" }

[lints]
workspace = true
