[package]
name = "xiaoguai-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Xiaoguai core binary — wires api + agent + mcp + llm + storage + auth + audit."

[[bin]]
name = "xiaoguai-core"
path = "src/main.rs"

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-config = { path = "../xiaoguai-config" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-auth = { path = "../xiaoguai-auth" }
xiaoguai-audit = { path = "../xiaoguai-audit" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-api = { path = "../xiaoguai-api" }
xiaoguai-mcp = { path = "../xiaoguai-mcp" }
xiaoguai-runtime = { path = "../xiaoguai-runtime" }
# v0.12.0: scheduler + runtime — operator spawns the JobRunner on a
# tokio task and wires WebhookSource to the new HTTP route.
xiaoguai-scheduler = { path = "../xiaoguai-scheduler" }
# v0.12.2: incremental RAG re-index on file-watch — the bridge needs
# RagClient to expose RagReindexExecutor (deferred wiring, see
# scheduler_bridge.rs module docs).
xiaoguai-rag = { path = "../xiaoguai-rag" }
# v0.11.2: assemble the EvalService (runner + suites dir) so the admin
# console can drive `xiaoguai eval` flows via HTTP.
xiaoguai-eval = { path = "../xiaoguai-eval" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
# v0.6.5: bridge `PgAuditSink` into `xiaoguai-api`'s `AuditReader` /
# `AuditVerifier` traits inside this binary.
async-trait = { workspace = true }
# v0.12.1: futures::StreamExt to drain LlmBackend::chat_stream when
# compiling NL job descriptions; uuid v4 for synthetic session ids.
futures = { workspace = true }
uuid = { workspace = true }
hex = "0.4"
# v0.7.4: IM gateway wiring (PG history default + in-process fallback).
axum = { workspace = true }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
xiaoguai-im-feishu = { path = "../xiaoguai-im-feishu" }
# v1.1.3: DingTalk + WeCom adapters mounted alongside Feishu when
# operator supplies the required env vars.
xiaoguai-im-dingtalk = { path = "../xiaoguai-im-dingtalk" }
xiaoguai-im-wecom = { path = "../xiaoguai-im-wecom" }

[dev-dependencies]
parking_lot = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
# v1.1.5a: peer_mvp integration test spins two in-process xiaoguai
# peers on ephemeral TCP ports and drives the front-door via HTTP.
reqwest = { workspace = true }

[lints]
workspace = true
