[package]
name = "xiaoguai-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Xiaoguai core binary — wires api + agent + mcp + llm + storage + auth + audit."

[[bin]]
name = "xiaoguai-core"
path = "src/main.rs"

# v1.3.1-prep: AR collections pack integration tests.
# Exercises pack manifest parsing, watch/anomaly spec round-trips, and Jinja
# template rendering.  DB + F1/F2 tests inside are marked #[ignore].
[[test]]
name = "ar_collections_pack"
path = "../../packs/ar-collections/tests/integration.rs"

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-config = { path = "../xiaoguai-config" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-auth = { path = "../xiaoguai-auth" }
xiaoguai-audit = { path = "../xiaoguai-audit" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-api = { path = "../xiaoguai-api" }
xiaoguai-mcp = { path = "../xiaoguai-mcp" }
xiaoguai-runtime = { path = "../xiaoguai-runtime" }
# v0.12.0: scheduler + runtime — operator spawns the JobRunner on a
# tokio task and wires WebhookSource to the new HTTP route.
xiaoguai-scheduler = { path = "../xiaoguai-scheduler" }
# v0.12.2: incremental RAG re-index on file-watch — the bridge needs
# RagClient to expose RagReindexExecutor (deferred wiring, see
# scheduler_bridge.rs module docs).
xiaoguai-rag = { path = "../xiaoguai-rag" }
# v0.11.2: assemble the EvalService (runner + suites dir) so the admin
# console can drive `xiaoguai eval` flows via HTTP.
xiaoguai-eval = { path = "../xiaoguai-eval" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
# v0.6.5: bridge `PgAuditSink` into `xiaoguai-api`'s `AuditReader` /
# `AuditVerifier` traits inside this binary.
async-trait = { workspace = true }
# v0.12.1: futures::StreamExt to drain LlmBackend::chat_stream when
# compiling NL job descriptions; uuid v4 for synthetic session ids.
futures = { workspace = true }
uuid = { workspace = true }
hex = "0.4"
# v1.3.1-prep: pack loader — YAML manifest parsing + Jinja template rendering.
# Both are feature-gated (`cfg(feature = "packs")`) so existing builds are
# unaffected until the feature flag is explicitly enabled.
serde_yaml = { workspace = true, optional = true }
tera = { workspace = true, optional = true }
# serde with derive is needed by packs.rs (feature-gated) for PackManifest
# deserialization. Pulled in explicitly so the proc-macro path is unambiguous
# even when rmcp re-exports its own serde namespace.
serde = { workspace = true, optional = true }
# v0.7.4: IM gateway wiring (PG history default + in-process fallback).
axum = { workspace = true }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
xiaoguai-im-feishu = { path = "../xiaoguai-im-feishu" }
# v1.1.3: DingTalk + WeCom adapters mounted alongside Feishu when
# operator supplies the required env vars.
xiaoguai-im-dingtalk = { path = "../xiaoguai-im-dingtalk" }
xiaoguai-im-wecom = { path = "../xiaoguai-im-wecom" }
# v1.2.11: Prometheus metrics + OTLP traces — gated on the
# "observability" feature so builds without telemetry stay unchanged.
xiaoguai-observability = { path = "../xiaoguai-observability", optional = true }

[features]
# Activate Prometheus + OTLP telemetry layers.
observability = ["dep:xiaoguai-observability"]
# v1.3.1-prep: pack loader (declarative skill pack manifest + template engine).
# Enable with: cargo build --features packs
# Will be enabled by default once F1/F2/F3 are merged.
packs = ["dep:serde_yaml", "dep:tera", "dep:serde"]

[dev-dependencies]
parking_lot = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
# v1.1.5a: peer_mvp integration test spins two in-process xiaoguai
# peers on ephemeral TCP ports and drives the front-door via HTTP.
reqwest = { workspace = true }
# v1.3.1-prep: ar-collections pack integration tests (template rendering,
# spec parsing). These run without --features packs because the test file
# imports tera + serde_yaml directly rather than via packs.rs.
tera = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

# v1.1.6.2: sd-notify integration for Type=notify and watchdog pings.
# Linux-only; only used in xiaoguai-core (not a workspace dep).
[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[lints]
workspace = true
