[package]
name = "xiaoguai-im-dingtalk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DingTalk IM adapter (skeleton, v1.1 target)."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
