[package]
name = "xiaoguai-im-dingtalk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "DingTalk IM adapter — webhook signature verification + parser + OpenAPI reply."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
xiaoguai-im-common = { path = "../xiaoguai-im-common" }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mockito = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[lints]
workspace = true
