[package]
name = "xiaoguai-im-discord"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Discord IM adapter — Ed25519 signature verification + Interactions webhook + outbound message send."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
xiaoguai-im-common = { path = "../xiaoguai-im-common" }
async-trait = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mockito = { workspace = true }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true }

[lints]
workspace = true
