[package]
name = "xiaoguai-im-feishu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Feishu IM adapter — webhook signature verification + parser."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
xiaoguai-im-common = { path = "../xiaoguai-im-common" }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
