[package]
name = "xiaoguai-im-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "IM gateway library — provider trait + axum mount."

[lib]
name = "xiaoguai_im_gateway"
path = "src/lib.rs"

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-api = { path = "../xiaoguai-api" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xiaoguai-storage = { path = "../xiaoguai-storage" }
xiaoguai-im-feishu = { path = "../xiaoguai-im-feishu" }
tower = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
async-trait = { workspace = true }

[lints]
workspace = true
