[package]
name = "xiaoguai-im-gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "IM gateway library — provider trait + axum mount."

[lib]
name = "xiaoguai_im_gateway"
path = "src/lib.rs"

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-api = { path = "../xiaoguai-api" }
xiaoguai-agent = { path = "../xiaoguai-agent" }
xiaoguai-llm = { path = "../xiaoguai-llm" }
xiaoguai-runtime = { path = "../xiaoguai-runtime" }
xiaoguai-storage = { path = "../xiaoguai-storage" }
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
parking_lot = { workspace = true }
xiaoguai-observability = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
xiaoguai-im-feishu = { path = "../xiaoguai-im-feishu" }
xiaoguai-im-dingtalk = { path = "../xiaoguai-im-dingtalk" }
xiaoguai-im-wecom = { path = "../xiaoguai-im-wecom" }
tower = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
async-trait = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
