[package]
name = "xiaoguai-im-telegram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Telegram Bot API adapter — webhook + long-poll + outbound messaging."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mockito = { workspace = true }

[lints]
workspace = true
