[package]
name = "xiaoguai-im-wecom"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WeCom (企业微信) IM adapter — webhook signature verification + parser + OpenAPI reply."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-im-gateway = { path = "../xiaoguai-im-gateway" }
xiaoguai-im-common = { path = "../xiaoguai-im-common" }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
quick-xml = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
aes = { workspace = true }
base64 = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
mockito = { workspace = true }

[lints]
workspace = true
