[package]
name = "xiaoguai-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LLM router and backends (Ollama, OpenAI-compatible, vLLM)."

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Bedrock SigV4 signing (hand-rolled, no aws-sdk dependency)
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
