[package]
name = "xiaoguai-mcp-exec-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "L3 sandbox: wasmtime + pyodide (Python) and wasmtime + QuickJS-WASM (JavaScript) MCP servers. Capability-based isolation; per-tenant tier selector lives upstream (see DEC-019, DEC-020)."

[lib]
name = "xiaoguai_mcp_exec_wasm"
path = "src/lib.rs"

[[bin]]
name = "xiaoguai-mcp-exec-wasm-py"
path = "src/bin/python.rs"

[[bin]]
name = "xiaoguai-mcp-exec-wasm-js"
path = "src/bin/javascript.rs"

[dependencies]
xiaoguai-types = { path = "../xiaoguai-types" }
xiaoguai-mcp-exec = { path = "../xiaoguai-mcp-exec" }
xiaoguai-mcp-exec-js = { path = "../xiaoguai-mcp-exec-js" }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rmcp = { workspace = true, features = ["server", "transport-io"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# wasmtime 45 — CVE-safe line; clears RUSTSEC-2026-0086/0087/0089
# (38.x panics) plus the newer 0114 (table allocation panic) and
# 0149 (HIGH: wasmtime-wasi path_open(TRUNCATE) write-perm bypass)
# that surfaced in the 42.x line. Floored at 45.0.2 to also clear
# RUSTSEC-2026-0182 (LOW: WASIp1 fd_renumber leak; this crate runs
# untrusted WASI modules, so the real bump beats a deny.toml ignore).
# 45.0.0+ requires rustc 1.93
# (Edition 2024); rust-toolchain.toml was bumped to 1.93 in the
# same change. The prior sprint-12 attempt at 45.x was reverted
# only because the toolchain wasn't bumped at the same time —
# see ADR-0021 for the joined decision.
#
# default-features off + explicit list keeps build time reasonable
# (avoids compiling features we never use: wat, profiling, etc.).
# `p1` is the preview1 WASI surface; `async` covers both the wasmtime
# async runtime and the component-model dep we need for wasi p1.
wasmtime = { version = "45.0.2", default-features = false, features = ["async", "cranelift", "runtime", "parallel-compilation"] }
wasmtime-wasi = { version = "45.0.3", default-features = false, features = ["p1"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
